@@ -1,9 +1,6 @@
 package com.bank.dto;
 
 import java.math.BigDecimal;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -20,8 +17,8 @@ public class BankSummaryResponse {
         this.totalAccounts = totalAccounts;
         this.totalBalance = totalBalance;
         this.averageBalance = averageBalance;
-        this.accountsByType = Collections.unmodifiableMap(new LinkedHashMap<>(accountsByType));
-        this.premiumOwners = Collections.unmodifiableList(new ArrayList<>(premiumOwners));
+        this.accountsByType = Map.copyOf(accountsByType);
+        this.premiumOwners = List.copyOf(premiumOwners);
     }
 
     public long getTotalAccounts() {
